# plens

./: .gitignore  CMakeLists.txt  README.md  main.cc
IBCs/: BC.cc  BC.h  BCTest.h  CMakeLists.txt  IC.cc  IC.h  bc_test_data.h  double_mach_reflection.cc  double_mach_reflection.h  empty.cc  empty.h  free.cc  free.h  from_archive.cc  from_archive.h  from_archive_restart.cc  from_archive_restart.h  ic_test_data.h  insulated_wall.cc  insulated_wall.h  outflow.cc  outflow.h  periodic.cc  periodic.h  piecewise_function.cc  piecewise_function.h  symmetry.cc  symmetry.h  uniform_inflow.cc  uniform_inflow.h  uniform_temp_wall.cc  uniform_temp_wall.h  varying_inflow.cc  varying_inflow.h  zpg_inflow.cc  zpg_inflow.h
dgsem/: CMakeLists.txt  LA.h  blender_calculator.cc  blender_calculator.h  cell_dof_info.h  change_of_basis_matrix.h  dtype_aliases.h  face_dof_info.h  face_local_dof_data.h  ldof_data.h  local_dof_data.h  metric_terms.cc  metric_terms.h  metric_terms.inst  plens.cc  plens.h  plens_test.cc  plens_test.h  rk4_stage5_register3.cc  rk4_stage5_register3.h  rk_coeffs.h  set_manifold.h  subcell_interpolator.cc  subcell_interpolator.h
doxygen/: .gitignore  Doxyfile
manifolds/: CMakeLists.txt  cylinder.cc  cylinder.h  manifold_description.cc  manifold_description.h  nose_cylinder.cc  nose_cylinder.h
modelling/: CMakeLists.txt  NavierStokes.cc  NavierStokes.h  ausm_functions.h  avars.h  cavars.h  minmod.h  navier_stokes.cc  navier_stokes.h  none.h  slope_limiter.h  state.h  var_enums.h  vars.h
study1/: .gitignore
study1/dmr/scripts/: .gitignore  base_input.prm  base_mesh.geo  crop_images.py  extract_data.py  generate_geo_file.py  plot_group.py
study1/forward_facing_step/scripts/: generate_geo_file.py
study1/report/: .gitignore  main.tex  references.bib
study1/report/figures/: dgsem_subcell_fv_equivalence.tex
study1/riemann_1d/scripts/: compute_3d_error.py  do_full_analysis.py  do_full_case_analysis.py  do_full_individual_analysis.py  extract_data.py  generate_geo_file.py  ic_data.py  plot_error_cpu.py  plot_group.py  plot_group_all.py  plot_group_dof.py  plot_individual.py  run.sh  setup_case.py  shockTubeSoln.py
study1/shu_osher/: .gitignore
study1/shu_osher/data/: .gitignore  rho_ref_data.csv  rho_ref_data_monotonic.txt  shuOsher1989.tar  smooth_ref_data.py
study1/shu_osher/run/: .gitignore
study1/shu_osher/scripts/: .gitignore  extract_data.py  extract_group.py  generate_geo_file.py  multiple_setup_cases.sh  plot_group.py  plot_individual.py  setup_case.py  temp.py
study2/deepak_M9_wedge18/data/: deepak_St.csv  deepak_p.csv  mallinson_St.csv  mallinson_p.csv  olejniczak_St.csv  olejniczak_p.csv
study2/deepak_M9_wedge18/scripts/: extract_data.py  plot.py
study2/hcef_run14/data/: .gitignore  St_candler.csv  St_harvey.csv  cp_candler.csv  cp_harvey.csv  harvey_candler_cp_St.tar
study2/hcef_run14/scripts/: extract_data.py  plot.py
study2/hcef_run8/data/: St_gnoffo.csv  St_harvey.csv  cp_gnoffo.csv  cp_harvey.csv
study2/hcef_run8/scripts/: extract_data.py  plot.py
study2/hcef_run9/: .gitignore
study2/hcef_run9/data/: .gitignore  harvey_gnoffo_cp_St.tar
study2/hcef_run9/scripts/: extract_data.py  make_movie.py  plot.py  plot_group.py
study2/hung_M14_wedge18/data/: .gitignore  holden_cf.csv  holden_ch.csv  holden_cp.csv  hung_cf.csv  hung_ch.csv  hung_cp.csv  hung_holden_cf_ch.tar  hung_holden_cp.tar  inviscid.csv
study2/hung_M14_wedge18/scripts/: extract_data.py  plot.py
study2/hung_M14_wedge24/data/: .gitignore  holden_ch.csv  holden_cp.csv  hung_ch.csv  hung_cp.csv  hung_holden_cf_ch.tar  hung_holden_cp.tar  rudy_cp.tar  rudy_cp_2d_201.csv
study2/hung_M14_wedge24/scripts/: extract_data.py  plot.py
study2/kitamura_M8_cylinder/data/: .gitignore  kitamura_p_ausmpw.csv  kitamura_p_ausmpw_coarse.csv  kitamura_q_ausm_fine.csv  kitamura_q_ausmpw_coarse.csv  kitamura_q_ausmpw_fine.csv  kitamura_q_roe_efix_coarse.csv
study2/kitamura_M8_cylinder/scripts/: extract_data.py  plot.py  plot_group.py
study2/swantek_M7_2_double_wedge/data/: M7_2_N2_0.27ms_heat_flux.tar  komives_q_0.27ms.csv
study2/swantek_M7_2_double_wedge/scripts/: extract_data.py  plot.py
utilities/: CMakeLists.txt  delete_openfoam_files.py  delete_result_files.py  delete_su2_files.py  generate_pvd_from_existing.py  gmsh_transfinite_spec_conversion.py  minmod.h  plens_git_revision.h  plens_git_revision.h.in  plot_mesh.py  plot_ss_error.py  printing.cc  printing.h  shock_tube_plotting.py  split_string.h  testing.cc  testing.h
